# AgriAssist

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-DOCKER.md  README.md  docker-compose.yml  main.ipynb  main.py  pyproject.toml  requirements.txt  sample.env  tempCodeRunnerFile.py  test-docker.sh
.gradio/flagged/: dataset1.csv
app/: config.py  handlers.py  ui.py
frontend/: index.html  main.js  style.css
src/: app.py
src/agriassist/: config.py  handlers.py  ui.py
