[project]
name = "agriassist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "gradio>=5.44.1",
    "gtts>=2.5.4",
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pillow>=11.3.0",
]
